--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,6 +21,11 @@
 
 en:
   brand: "Penuel"
+  email: "Email"
+  password: "Password"
+  remember_me: "Remember me on this computer"
+  logout: "Log out"
+
   sessions:
     new:
       email: 'Email'
