--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -65,6 +65,7 @@ ru:
     index:
       heading: "Расходы и доходы"
       new: "Новая запись"
+      description_en_missed: "Нужно сделать перевод на английский"
     new:
       heading: "Новый расход или доход"
     edit:
