A user can participate in a team as a player or coach

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -19,6 +19,7 @@ ru:
   delete: "Удалить"
   confirm: "Вы уверены?"
   coaches: "Тренеры"
+  players: "Игроки"
 
   name_ru: "Русское название"
   name_en: "Английское название"
@@ -44,6 +45,8 @@ ru:
       role: 'Роль'
     edit:
       heading: "Редактирование данных пользователя"
+    show:
+      heading: "Информация про пользователя"
 
   sessions:
     new:
