--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -40,6 +40,7 @@ en:
   delete: "Delete"
   confirm: "Are you sure?"
   coaches: "Coaches"
+  players: "Players"
 
   users:
     index:
@@ -57,6 +58,8 @@ en:
       role: 'Role'
     edit:
       heading: "Edit a user info"
+    show:
+      heading: "Information about a user"
 
   sessions:
     new:
